--- a/KeyPad/Assembly-CSharp.csproj
+++ b/KeyPad/Assembly-CSharp.csproj
@@ -60,13 +60,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\DragController.cs" />
+    <Compile Include="Assets\Pattern\TouchTest.cs" />
+    <Compile Include="Assets\PinTechnique.cs" />
     <Compile Include="Assets\TouchFollower.cs" />
-    <Compile Include="Assets\TouchTest.cs" />
     <Compile Include="Assets\UnityUIExtensions\BezierPath.cs" />
     <Compile Include="Assets\UnityUIExtensions\CableCurve.cs" />
     <Compile Include="Assets\UnityUIExtensions\SetPropertyUtility.cs" />
     <Compile Include="Assets\UnityUIExtensions\UILineRenderer.cs" />
     <Compile Include="Assets\UnityUIExtensions\UIPrimitiveBase.cs" />
+    <Compile Include="Assets\Util.cs" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>/Users/yixinwang/cs858/KeyPad/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
     </Reference>
