--- a/KeyPad/Assembly-CSharp.csproj
+++ b/KeyPad/Assembly-CSharp.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Assets\UnityUIExtensions\SetPropertyUtility.cs" />
     <Compile Include="Assets\UnityUIExtensions\UILineRenderer.cs" />
     <Compile Include="Assets\UnityUIExtensions\UIPrimitiveBase.cs" />
+    <Compile Include="Assets\UserInput.cs" />
     <Compile Include="Assets\Util.cs" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>/Users/yixinwang/cs858/KeyPad/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
